[project]
name = "swiggy-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.11.11",
    "alembic==1.14.1",
    "asyncpg==0.30.0",
    "black==24.10.0",
    "fastapi==0.115.6",
    "groq==0.15.0",
    "httpx==0.28.1",
    "isort==5.13.2",
    "librosa==0.10.2.post1",
    "numpy==2.2.1",
    "onnxruntime==1.20.1",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.1",
    "pytest-cov==6.0.0",
    "python-dotenv==1.0.1",
    "silero-vad==5.1.2",
    "soundfile==0.13.0",
    "sqlalchemy==2.0.36",
    "twilio==9.4.4",
    "uvicorn[standard]==0.34.0",
]
